--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,26 +1,38 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: bonny1992 # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Affiliate
+    url: https://affiliate.bonny.pw
+  - name: Bonosaglass.com
+    url: https://bonosaglass.com
+  - name: Jackett
+    url: https://jackett.bonny.pw
+  - name: Ombi
+    url: https://ombi.bonny.pw
+  - name: Overseerr
+    url: https://overseerr.bonny.pw
+  - name: Deluge
+    url: https://delugevpn.bonny.pw
+  - name: NZBGet
+    url: https://nzbget.bonny.pw
+  - name: Sonarr
+    url: https://sonarr.bonny.pw
+  - name: Radarr
+    url: https://radarr.bonny.pw
+  - name: Sonarr
+    url: https://sonarr.bonny.pw
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.bonny.pw
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Bonny Status Page
+  introTitle: "Bonny Status Page - Powered by Upptime.js"
+  introMessage: This is a status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
