--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,6 +33,7 @@ status-website:
   name: Bonny Status Page
   introTitle: "Bonny Status Page - Powered by Upptime.js"
   introMessage: This is a status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  theme: dark
   navbar:
     - title: Status
       href: /
