--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: bonny1992 # Your GitHub organization or username, where this repository lives
-repo: status # The name of this repository
+repo: upptime # The name of this repository
 
 sites:
   - name: Affiliate
@@ -42,7 +42,7 @@ status-website:
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
     - title: More problems? Report it here
-      href: https://github.com/$OWNER/$REPO/status/issues
+      href: https://github.com/$OWNER/$REPO/issues
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
