--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -31,9 +31,9 @@ sites:
     url: $URLS_FILEBOT
     expectedStatusCodes:
       - 401 # As it's behind user+pass
-  # - name: Synclounge
-  #   url: $URLS_SYNCLOUNGE
-  # Commented this out because it's not working at this time
+  - name: Synclounge
+    url: $URLS_SYNCLOUNGE
+  # Will be permanently not working until Cloudbox Community releases a fixed role
   - name: Bazarr
     url: $URLS_BAZARR
   - name: NextCloud
